# vdv

./: .pkg  CMakeLists.txt  LICENSE  README.md
exe/: client.cc  server.cc  update_file.cc
include/vdv/: client.h  msg.h  requests.h  subscription.h  timestamp.h  types.h  vdv_client.h  vdv_config.h  vdv_run.h  xml.h  xml_in.h  xml_out.h
include/vdv/client/: requests.h
src/: client.cc  msg.cc  timestamp.cc  vdv_client.cc  vdv_config.cc  xml.cc  xml_in.cc  xml_out.cc
src/client/: abo_anfrage.cc
test/: client_requests_test.cc  main.cc  xml_in_test.cc  xml_out_test.cc  xml_test_data.h
